# =============================================================================
# PACKAGING: behave4cmd0
# =============================================================================
# SEE: https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
# SEE: https://pypi.org/classifiers/
# MAYBE: requires = ["setuptools", "setuptools-scm"]
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "behave4cmd0"
authors = [
    {name = "Jens Engel", email = "jenisys@noreply.github.com"},
]
description = "Provides a step-library for `behave <https://pypi.org/project/behave>`_ for testing commands/CLI apps."
readme = "README.rst"
requires-python = ">=2.7, !=3.0.*, !=3.1.*, !=3.2.*"
keywords = ["behave", "behave step-library", "console", "CLI", "testing", "BDD"]
license = {text = "BSD-2-Clause"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Behave",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: BDD",
    "Topic :: Terminals",
]
dependencies = [
    "enum34; python_version < '3.4'",
    "six >= 1.15.0",
    # -- ASSERTION MATCHERS:
    "assertpy >= 1.1",
    "PyHamcrest >= 2.0.2; python_version >= '3.0'",
    "PyHamcrest <  2.0;   python_version <  '3.0'",
]
# MAYBE: version = "1.2.7.dev5"
dynamic = ["version"]


[project.urls]
Homepage = "https://github.com/behave/behave4cmd0"
"Source Code" = "https://github.com/behave/behave4cmd0"
"Issue Tracker" = "https://github.com/behave/behave4cmd0/issues/"


[project.optional-dependencies]
develop = [
    "build >= 0.5.1",
    "twine",
]
docs = [
    "sphinx >=1.6",
    "sphinx_bootstrap_theme >= 0.6.0"
]
testing = [
    "pytest <  5.0; python_version <  '3.0'",
    "pytest >= 5.0; python_version >= '3.0'",
    "pytest-html >= 1.19.0,<2.0; python_version <  '3.0'",
    "pytest-html >= 2.0;         python_version >= '3.0'",
]


[tool.distutils.bdist_wheel]
universal = true


# -----------------------------------------------------------------------------
# PACAKING TOOL SPECIFIC PARTS:
# -----------------------------------------------------------------------------
[tool.setuptools.packages.find]
where = ["."]
include = ["behave4cmd0*"]
exclude = ["tests*"]
namespaces = false

[tool.setuptools.dynamic]
version = {attr = "behave4cmd0.__version__"}


# =============================================================================
# OTHER PARTS:
# =============================================================================
# -----------------------------------------------------------------------------
# SECTION: ruff -- Python linter
# -----------------------------------------------------------------------------
# SEE: https://github.com/charliermarsh/ruff
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
[tool.ruff]
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W",
    "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC",
    "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF",
    "TCH", "TID", "TRY", "UP", "YTT"
]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".direnv",
    ".eggs",
    ".git",
    ".ruff_cache",
    ".tox",
    ".venv*",
    "__pypackages__",
    "build",
    "dist",
    "venv",
]
per-file-ignores = {}

# Same as Black.
# WAS: line-length = 88
line-length = 100

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py310"

[tool.ruff.mccabe]
max-complexity = 10
