# =============================================================================
# PACKAGE: behave4cmd0
# =============================================================================
# SPDX-License-Identifier: BSD-2-Clause
# DESCRIPTION:
#   Provides a "pyproject.toml" for packaging usecases of this package.
#
# REASONS:
#   * Python project will need a "pyproject.toml" soon to be installable with "pip".
#   * Currently, duplicates information from "setup.py" here.
#   * "setup.py" is kept until Python 2.7 support is dropped
#   * "setup.py" is sometimes needed in some weird cases (old pip version, ...)
#
# SEE ALSO:
#   * https://packaging.python.org/en/latest/tutorials/packaging-projects/
#   * https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
#   * https://pip.pypa.io/en/stable/reference/build-system/pyproject-toml/
#
# RELATED: Project-Metadata Schema
#   * https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
#   * https://packaging.python.org/en/latest/specifications/core-metadata/
#   * https://pypi.org/classifiers/
#   * https://spdx.org/licenses/preview/
#
# PEPs: https://peps.python.org/pep-XXXX/
#   * PEP 508 – Dependency specification for Python Software Packages
#   * PEP 621 – Storing project metadata in pyproject.toml => CURRENT-SPEC: declaring-project-metadata
#   * PEP 631 – Dependency specification in pyproject.toml based on PEP 508
#   * PEP 639 – Improving License Clarity with Better Package Metadata
# =============================================================================
# PREPARED-FOR: setuptools-scm
#   * BUT: v1.2.7.devX causes problems with setuptools-scm
#
# SEE ALSO:
#   * https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
#   * https://pypi.org/classifiers/
#
# PREPARED:
#   * https://setuptools-scm.readthedocs.io/en/latest/usage/
# =============================================================================
# PYTHON3: requires = ["setuptools>=64", "setuptools_scm>=8", "wheel"]
# PREPARED: requires = ["setuptools", "setuptools_scm", "wheel"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "behave4cmd0"
authors = [
    {name = "Jens Engel", email = "jenisys@noreply.github.com"},
]
maintainers = [
    {name = "Jens Engel", email = "jenisys@noreply.github.com"},
]
description = "Provides a step-library for `behave <https://pypi.org/project/behave>`_ for testing commands/CLI apps."
dynamic = ["version"]
readme = "README.rst"
requires-python = ">=3.10"
keywords = [
    "behave", "behave step-library", "BDD", "console", "CLI", "testing",
]
license = "BSD-2-Clause"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Behave",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: BDD",
    "Topic :: Terminals",
]
dependencies = [
    # PREPARED: "behave >= 1.3.1; python_version >= '3.10'",
    # -- ASSERTION MATCHERS:
    "assertpy >= 1.1",
    "PyHamcrest >= 2.0.2",

    # -- SUPPORT: "pyproject.toml" (or: "behave.toml")
    "tomli>=1.1.0; python_version >=  '3.0' and python_version < '3.11'",
]

[project.urls]
Homepage  = "https://github.com/behave/behave4cmd0"
Repository = "https://github.com/behave/behave4cmd0"
Issues = "https://github.com/behave/behave4cmd0/issues/"
Changelog = "https://github.com/behave/behave4cmd0/blob/main/CHANGELOG.rst"
# -- PREPARED:
# Documentation = "https://behave4cmd0.readthedocs.io/en/latest/"

# -- PREPARED:
[project.optional-dependencies]
develop = [
    "build >= 0.5.1",
    "twine >= 1.13.0",
    "coverage >= 5.0",
    "pytest >= 8.0",
    "pytest-html >= 2.0",
    "PyHamcrest >= 2.0.2",
    "pytest-cov",
    "tox   >= 3.28.0,<4.0",   # -- HINT: tox >= 4.0 has breaking changes.
    "virtualenv >= 20.26.6",

    "codespell",

    # -- PREPARED:
    # "invoke >=2.0.0",
    # "path >= 13.1.0",
    # "pycmd",
    # "modernize >= 0.5",
    # "pylint",
    # "ruff",
]
docs = [
    "sphinx >= 8.0.0",
    # -- SPHINX-THEME:
    # "furo >= 2024.04.27; python_version >= '3.8'",
    # -- SPHINX-EXTENSIONS:
    "sphinx-copybutton >= 0.5.2; python_version >= '3.7'",
    "codespell",
]
testing = [
    "pytest >= 8.0",
    "pytest-html >= 2.0",
    "PyHamcrest >= 2.0.2",
    "assertpy >= 1.1",
]


# -----------------------------------------------------------------------------
# PACAKING TOOL SPECIFIC PARTS:
# -----------------------------------------------------------------------------
[tool.setuptools]
platforms = ["any"]
zip-safe = true

[tool.setuptools.dynamic]
version = {attr = "behave4cmd0.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["behave4cmd0*"]
exclude = ["tests*"]
namespaces = false

# -- PREPARED: SETUPTOOLS-SCM: Generate version info from git-tag(s).
# # GIT-TAG MATCHER: Only use git-tags that start with "v", like: "v1.3.0"
# [tool.setuptools_scm]
# git_describe_command = "git describe --match 'v[0-9]*'"
# version_file = "behave4cmd0/__init__.py"


# -----------------------------------------------------------------------------
# PYLINT:
# -----------------------------------------------------------------------------
[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "100"

# -----------------------------------------------------------------------------
# RUFF: https://docs.astral.sh/ruff/tutorial/#configuration
# -----------------------------------------------------------------------------
# ruff: noqa: E731
[tool.ruff]
line-length = 100

# [tool.ruff.lint]
# extend-select = ["E501"]
# [tool.ruff.lint.pydocstyle]
# convention = "google"

# -----------------------------------------------------------------------------
# CODESPELL
# -----------------------------------------------------------------------------
# SEE: https://github.com/codespell-project/codespell
[tool.codespell]
skip = [
    "./venv/",
    "./.venv/",
    "./tox/",
]
ignore-words = ".codespell.ignore_words"
# count = true
# quiet-level = 3
